# akka-serial

flow-main/src/main/scala/com/github/jodersky/flow/internal/: NativeLoader.scala
flow-native/: .gitignore  CMakeLists.txt
flow-native/debian/: control  rules
flow-native/pkg/: mkpkg
flow-native/src/: flow_jni.c
project/: Build.scala  native.scala  release.scala
